--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -19,6 +19,8 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
+# environment:
+#   sdk: '>=2.12.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
